Enhance work card styles and update content descriptions
Added styles for work cards and improved hover effects. Updated content descriptions for various works to enhance clarity and engagement.

--- a/index.html
+++ b/index.html
@@ -239,6 +239,22 @@
             height: 100%;
             backdrop-filter: blur(10px);
         }
+        .work-card {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    border: 1px solid #ddd;
+    padding: 15px;
+    margin-bottom: 1rem;
+    border-radius: 8px;
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.work-card:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
 
         .work-card:hover {
             transform: translateY(-10px);
@@ -522,108 +538,118 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
 
 <h2 class="section-title">Top Works</h2>
 <div class="top-works">
-    <div class="work-card">
+
+    <a href="https://novelnovmber-60044720209.catalystserverless.in/app/index.html" target="_blank" class="work-card">
         <div class="work-content">
+            <img src="https://thenounproject.com/icon/project-management-12345/svg" alt="Project Coordination Icon" style="width:80px; height:auto; margin-bottom:10px;">
             <h3>Novel November – Coordinator & POC</h3>
-            <img src="https://thenounproject.com/icon/project-management-12345/svg" alt="Project Coordination Icon" style="width:100px; height:auto; margin-bottom:10px;">
-            <p>Led 20+ students, handling communication, timelines, and collaboration to ensure smooth execution.</p>
-            <p><a href="https://novelnovmber-60044720209.catalystserverless.in/app/index.html" target="_blank">View Novel November</a></p>
+            <p>Led 20+ students, handling communication, timelines, and collaboration for smooth execution.</p>
         </div>
-    </div>
+    </a>
 
-    <div class="work-card">
+    <a href="https://workdrive.zohoexternal.in/folder/kdqtx2acbb6ac6f2845acad94480d5859b73b" target="_blank" class="work-card">
         <div class="work-content">
+            <img src="https://thenounproject.com/icon/writing-12345/svg" alt="Writing Icon" style="width:80px; height:auto; margin-bottom:10px;">
             <h3>Tharuvai Bulletin – Writer</h3>
-            <img src="https://thenounproject.com/icon/writing-12345/svg" alt="Writing Icon" style="width:100px; height:auto; margin-bottom:10px;">
-            <p>Write articles on events and features, focusing on engaging storytelling and content quality.</p>
-            <p><a href="https://workdrive.zohoexternal.in/folder/kdqtx2acbb6ac6f2845acad94480d5859b73b" target="_blank">Check out my work here</a></p>
+            <p>Write event and feature articles with engaging storytelling and clear content.</p>
         </div>
-    </div>
+    </a>
 
-    <div class="work-card">
+    <a href="https://workdrive.zohopublic.in/writer/open/kdqtx5afc1680c05d4740993bdb2d17c72c1f" target="_blank" class="work-card">
         <div class="work-content">
+            <img src="https://thenounproject.com/icon/market-research-12345/svg" alt="Market Research Icon" style="width:80px; height:auto; margin-bottom:10px;">
             <h3>Pinterest Market Research</h3>
-            <img src="https://thenounproject.com/icon/market-research-12345/svg" alt="Market Research Icon" style="width:100px; height:auto; margin-bottom:10px;">
-            <p>Conducted TAM‑SAM‑SOM analysis to identify market segments and growth insights.</p>
-            <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx5afc1680c05d4740993bdb2d17c72c1f" target="_blank">View the research here</a></p>
+            <p>Conducted TAM‑SAM‑SOM analysis for market segmentation and growth insights.</p>
         </div>
-    </div>
+    </a>
 
-    <div class="work-card">
+    <a href="https://workdrive.zohopublic.in/writer/open/kdqtx26108a17c9704f27a06905c0b938bc59" target="_blank" class="work-card">
         <div class="work-content">
+            <img src="https://thenounproject.com/icon/analysis-12345/svg" alt="Analysis Icon" style="width:80px; height:auto; margin-bottom:10px;">
             <h3>Golden Circle Analysis – Snapchat</h3>
-            <img src="https://thenounproject.com/icon/analysis-12345/svg" alt="Analysis Icon" style="width:100px; height:auto; margin-bottom:10px;">
-            <p>Explored Snapchat’s core purpose and strategy, enhancing understanding of its value proposition.</p>
-            <p><a href="https://workdrive.zohopublic.in/writer/open/kdqtx26108a17c9704f27a06905c0b938bc59" target="_blank">View the analysis here</a></p>
+            <p>Explored Snapchat’s value, purpose, and strategic engagement elements.</p>
         </div>
-    </div>
+    </a>
 
-    <div class="work-card">
+    <a href="https://workdrive.zohoexternal.in/file/kdqtx9f0c5f7e99ad4f7d8d662ad33a6814ed" target="_blank" class="work-card">
         <div class="work-content">
+            <img src="https://thenounproject.com/icon/design-12345/svg" alt="Design Icon" style="width:80px; height:auto; margin-bottom:10px;">
             <h3>Tharuvai Bulletin (Vol. 4) – Designer</h3>
-            <img src="https://thenounproject.com/icon/design-12345/svg" alt="Design Icon" style="width:100px; height:auto; margin-bottom:10px;">
-            <p>Designed Volume 4’s layout and visual style for a cohesive, reader‑friendly look.</p>
-            <p><a href="https://workdrive.zohoexternal.in/file/kdqtx9f0c5f7e99ad4f7d8d662ad33a6814ed" target="_blank">View the publication here →</a></p>
+            <p>Designed Volume 4’s layout and visuals for a cohesive, polished look.</p>
         </div>
-    </div>
+    </a>
 
-    <div class="work-card">
+    <a href="https://workdrive.zoho.in/file/x3dyzcde028fa20234d56930dac7b28c9eb3f" target="_blank" class="work-card">
         <div class="work-content">
+            <img src="https://thenounproject.com/icon/pitch-deck-12345/svg" alt="Pitch Deck Icon" style="width:80px; height:auto; margin-bottom:10px;">
             <h3>Product Pitch Deck</h3>
-            <img src="https://thenounproject.com/icon/pitch-deck-12345/svg" alt="Pitch Deck Icon" style="width:100px; height:auto; margin-bottom:10px;">
-            <p>Created a clear pitch deck outlining problem, user needs, and solution value.</p>
-            <p><a href="https://workdrive.zoho.in/file/x3dyzcde028fa20234d56930dac7b28c9eb3f" target="_blank">View the deck here</a></p>
+            <p>Created a clear deck outlining problem, user needs, and value proposition.</p>
         </div>
-    </div>
+    </a>
+
 </div>
 
 
+<h2 class="section-title">Other Works</h2>
+<div class="Other-works">
 
-        <h2 class="section-title">Other Works</h2>
-        <div class="Other-works">
-            <div class="other-work-card">
-                <h3>Product Tour - Zoho Sheet</h3>
-                <p>I wrote the <strong>product tour for Zoho Sheet</strong>, creating clear, step-by-step instructions to help users understand key features. This project improved my technical writing and content structuring skills. 
-                <a href="https://workdrive.zoho.in/file/095h5e33f325253e64e3a9fc5603c85aceb41" target="_blank">View product tour here</a></p>
-            </div>
-            <div class="other-work-card">
-                <h3>Personal Blog - Writer</h3>
-                <p>I maintain a personal blog, <strong>Pages Remembered</strong>, where I write about ideas, reflections, and experiences. This work strengthens my creative writing and storytelling skills. 
-                <a href="https://www.blogger.com/blog/posts/6095930630957025891" target="_blank">Visit my blog here</a></p>
-            </div>
-            <div class="other-work-card">
-                <h3>Tharuvai Bulletin - Rule Book</h3>
-                <p>I created a <strong>rule book for Tharuvai Bulletin</strong>, establishing editorial guidelines for clarity and quality. This work improved my documentation and organizational skills. 
-                <a href="https://workdrive.zohopublic.in/writer/open/anv1vec66d1a8b20b4d249e1e5e2d6375c0be" target="_blank">View rule book here</a></p>
-            </div>
-           <div class="other-work-card">
-                <h3>Deprecation of SMS-Based Multi-Factor Authentication (MFA)</h3>
-              <p>
-  I wrote content on the <strong>deprecation of SMS-based MFA</strong>, explaining risks, alternatives, and best practices to guide users. This strengthened my technical writing and cybersecurity awareness skills.
-  <a href="https://writer.zoho.in/writer/open/go70v0eaf9de38704435eb38acf1467f04876" target="_blank">View MFA article</a>
-</p>
-</div>
-           
-            <div class="other-work-card">
-               <h3>Business Model Canvas (BMC)</h3>
-               <p>I created a <strong>Business Model Canvas</strong> to structure and present a product idea clearly. The canvas outlines key elements such as the value proposition, target customers, channels, and revenue streams, helping translate an idea into a cohesive business view.
-                 <a href="https://workdrive.zoho.in/file/8o8bp7d99498027e048b798ebdfe339d25a46" target="_blank">View BMC here   </a></p>
-            </div> 
-          
-              </div>
-<div class="other-work-card">
-   <h3>"Access Denied" - Novel November</h3>
-   <p>I wrote <strong>2 chapters for Access Denied novel</strong>: one collaboratively and one independently, showcasing creative writing and storytelling skills.  
-   <a href="https://workdrive.zohoexternal.in/folder/0nbaid238780ca2af4738bdfb1f208e5ca1b3" target="_blank">View chapters here →</a></p>
-</div>
-        <div class="other-work-card">
-   <h3>Business Proposal</h3>
-   <p>I created a <strong>business proposal</strong> for a product idea, clearly presenting the problem, solution, target market, and growth potential. The proposal demonstrates how an idea can be structured into a practical and well-defined business plan.
-   <a href="https://show.zoho.in/show/open/4jc8wa1b313426ba04014bcc727b747dd1377" target="_blank">View business proposal →</a></p>
-</div>
-
-
+    <a href="https://workdrive.zoho.in/file/095h5e33f325253e64e3a9fc5603c85aceb41" target="_blank" class="other-work-card">
+        <div class="work-content">
+            <img src="https://img.icons8.com/ios-filled/64/000000/documentation.png" alt="Product Tour Icon" style="width:50px; height:auto; margin-bottom:10px;">
+            <h3>Product Tour - Zoho Sheet</h3>
+            <p>Wrote the <strong>product tour for Zoho Sheet</strong>, creating clear step‑by‑step instructions to help users understand key features.</p>
         </div>
+    </a>
+
+    <a href="https://www.blogger.com/blog/posts/6095930630957025891" target="_blank" class="other-work-card">
+        <div class="work-content">
+            <img src="https://img.icons8.com/ios-filled/64/000000/blogger.png" alt="Blog Icon" style="width:50px; height:auto; margin-bottom:10px;">
+            <h3>Personal Blog – Writer</h3>
+            <p>I maintain <strong>Pages Remembered</strong>, writing about ideas, reflections, and life experiences.</p>
+        </div>
+    </a>
+
+    <a href="https://workdrive.zohopublic.in/writer/open/anv1vec66d1a8b20b4d249e1e5e2d6375c0be" target="_blank" class="other-work-card">
+        <div class="work-content">
+            <img src="https://img.icons8.com/ios-filled/64/000000/rule-book.png" alt="Rule Book Icon" style="width:50px; height:auto; margin-bottom:10px;">
+            <h3>Tharuvai Bulletin – Rule Book</h3>
+            <p>Created the <strong>editorial rule book</strong> to set guidelines for clarity and content standards.</p>
+        </div>
+    </a>
+
+    <a href="https://writer.zoho.in/writer/open/go70v0eaf9de38704435eb38acf1467f04876" target="_blank" class="other-work-card">
+        <div class="work-content">
+            <img src="https://img.icons8.com/ios-filled/64/000000/security-shield-notok.png" alt="Security Article Icon" style="width:50px; height:auto; margin-bottom:10px;">
+            <h3>Deprecation of SMS‑Based MFA</h3>
+            <p>Wrote about the <strong>deprecation of SMS MFA</strong>, explaining risks, alternatives, and best practices.</p>
+        </div>
+    </a>
+
+    <a href="https://workdrive.zoho.in/file/8o8bp7d99498027e048b798ebdfe339d25a46" target="_blank" class="other-work-card">
+        <div class="work-content">
+            <img src="https://img.icons8.com/ios-filled/64/000000/business-model.png" alt="Business Model Canvas Icon" style="width:50px; height:auto; margin-bottom:10px;">
+            <h3>Business Model Canvas (BMC)</h3>
+            <p>Created a <strong>Business Model Canvas</strong> outlining value proposition and key business elements.</p>
+        </div>
+    </a>
+
+    <a href="https://workdrive.zohoexternal.in/folder/0nbaid238780ca2af4738bdfb1f208e5ca1b3" target="_blank" class="other-work-card">
+        <div class="work-content">
+            <img src="https://img.icons8.com/ios-filled/64/000000/book.png" alt="Novel Icon" style="width:50px; height:auto; margin-bottom:10px;">
+            <h3>“Access Denied” – Novel November</h3>
+            <p>Wrote <strong>2 chapters</strong> for the “Access Denied” novel, showcasing creative storytelling.</p>
+        </div>
+    </a>
+
+    <a href="https://show.zoho.in/show/open/4jc8wa1b313426ba04014bcc727b747dd1377" target="_blank" class="other-work-card">
+        <div class="work-content">
+            <img src="https://img.icons8.com/ios-filled/64/000000/presentation.png" alt="Business Proposal Icon" style="width:50px; height:auto; margin-bottom:10px;">
+            <h3>Business Proposal</h3>
+            <p>Created a <strong>business proposal</strong> that presents problem, solution, target market, and growth potential clearly.</p>
+        </div>
+    </a>
+
+</div>
 
         <h2 class="section-title">Zoho Products Known</h2>
       <section class="zoho-products">
