--- a/index.html
+++ b/index.html
@@ -314,6 +314,17 @@
             flex-direction: column;
             backdrop-filter: blur(10px);
         }
+        .Other-works .other-work-card {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+}
+
+.Other-works .other-work-card:hover {
+    text-decoration: none;
+    color: inherit;
+}
+
 
         .other-work-card:hover {
             transform: translateY(-5px);
