--- a/index.html
+++ b/index.html
@@ -324,6 +324,18 @@
     text-decoration: none;
     color: inherit;
 }
+        /* Remove underline from all card links */
+.Other-works .other-work-card {
+    text-decoration: none; /* removes underline */
+    color: inherit;        /* keeps your text color */
+}
+
+/* Also ensure inner text doesn’t get underlined */
+.Other-works .other-work-card h3,
+.Other-works .other-work-card p {
+    text-decoration: none;
+}
+
 
 
         .other-work-card:hover {
