--- a/index.html
+++ b/index.html
@@ -294,31 +294,29 @@
             color: #4a5568;
         }
 
-        ..other-works-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 12px; /* space between cards */
-  justify-content: center;
-  padding: 1rem;
-}
+   .other-works {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+            margin-bottom: 50px;
+        }
 
         
-      .other-work-card {
-  width: 240px;          /* fixed small card */
-  flex: none;            /* don’t grow */
-  padding: 16px;
-  background: #111;
-  border: 1px solid #444;
-  border-radius: 8px;
-  text-decoration: none;  /* remove underline */
-  color: #fff;
-  transition: transform .15s;
-}
-        .Other-works .other-work-card {
-    display: block;
+ .other-work-card {
+            background: rgba(26, 26, 26, 0.95);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(74, 85, 104, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border: 1px solid #333;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            backdrop-filter: blur(10px);
+        }
+      .Other-works .other-work-card:hover {
     text-decoration: none;
     color: inherit;
-}
 
 .other-work-card:hover {
   transform: scale(1.03);
