--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
         </div>
     </a>
 
-    <a href="https://workdrive.zoho.in/file/x3dyzcde028fa20234d56930dac7b28c9eb3f" target="_blank" class="work-card">
+    <a href="https://workdrive.zoho.in/file/m8szh6bb32e16eaf9496da62a1632ea12e498" target="_blank" class="work-card">
         <div class="work-content">
             <h3>Product Pitch Deck</h3>
             <p>Created a clear deck outlining problem, user needs, and value proposition.</p>
@@ -549,7 +549,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
 <h2 class="section-title">Other Works</h2>
 <div class="other-works">
 
-    <a href="https://workdrive.zoho.in/file/095h5e33f325253e64e3a9fc5603c85aceb41" target="_blank" class="other-work-card">
+    <a href="https://workdrive.zoho.in/file/kdqtx189d781bff144196ad62137890628ff2" target="_blank" class="other-work-card">
         <h3>Product Tour - Zoho Sheet</h3>
         <p>Wrote the <strong>product tour for Zoho Sheet</strong>, creating clear step‑by‑step instructions to help users understand key features.</p>
     </a>
@@ -569,7 +569,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
         <p>Wrote about the <strong>deprecation of SMS MFA</strong>, explaining risks, alternatives, and best practices.</p>
     </a>
 
-    <a href="https://workdrive.zoho.in/file/8o8bp7d99498027e048b798ebdfe339d25a46" target="_blank" class="other-work-card">
+    <a href="https://workdrive.zohopublic.in/show/open/4xs0r9f13998739cb4c4ea5a2164efa245641" target="_blank" class="other-work-card">
         <h3>Business Model Canvas (BMC)</h3>
         <p>Created a <strong>Business Model Canvas</strong> outlining value proposition and key business elements.</p>
     </a>
