--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ Being dependable, open to growth, and committed to doing my best in whatever I t
 
     <div class="product-card">
       <div class="product-icon">
-        <img src="https://desk.zoho.in/portal/api/kbCategory/205219000000099142/logo/6943819000000658810?orgId=60041003425" alt="Zoho Desk">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQa4KQHD1e3TIbkiYbYOc9n5d9stMulbR61w&s" alt="Zoho Desk">
       </div>
       <h4>Zoho Desk</h4>
     </div>
